--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -407,19 +407,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://stratechery.com/2018/the-scooter-economy/">The Scooter Economy</a>
+                                    <a href="https://code.facebook.com/posts/1461914677288302/open-sourcing-sonar-a-new-extensible-debugging-tool/">Open-sourcing Sonar, a new extensible debugging tool</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17284094">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17285589">
                                         
-                                            89 comments
+                                            20 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528724637"
+                                            href="https://news.ycombinator.com/user?id=emilsjolander">emilsjolander</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528734002"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    71 points
+                                    73 points
                                 </span>
                             </td>
                         </tr>
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://lists.nongnu.org/archive/html/gcl-devel/2012-10/pdfkieTlklRzN.pdf">How to Print Floating-Point Numbers Accurately (1990) [pdf]</a>
+                                    <a href="https://stratechery.com/2018/the-scooter-economy/">The Scooter Economy</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17277560">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17284094">
                                         
-                                            21 comments
+                                            90 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=tosh">tosh</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528628351"
+                                            href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528724637"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     71 points
                                 </span>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528739216" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528739408" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
