--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/s-matyukevich/raspberry-pi-os">Learning operating system development using Linux kernel and Raspberry Pi</a>
+                                    <a href="https://www.cntraveler.com/story/nearly-80-percent-of-japans-airbnbs-were-just-removed">Nearly 80% of Japan’s Airbnbs removed in response to new home-share law</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17282000">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17263565">
                                         
-                                            39 comments
+                                            315 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=axiomdata316">axiomdata316</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528694239"
+                                            href="https://news.ycombinator.com/user?id=vincvinc">vincvinc</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528446147"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    286 points
+                                    287 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528743007" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528743609" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
