--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.laphamsquarterly.org/roundtable/i-now-pronounce-you-legally-null-and-void">I Now Pronounce You Legally Null and Void</a>
+                                    <a href="http://joelcalifa.com/blog/tiny-wins/">Tiny Wins</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17280561">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17281563">
                                         
                                             1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=Petiver">Petiver</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528670251"
+                                            href="https://news.ycombinator.com/user?id=bemmu">bemmu</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528688190"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    7 points
+                                    5 points
                                 </span>
                             </td>
                         </tr>
@@ -417,7 +417,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528743609" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528744209" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
