--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -99,9 +99,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17283525" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17286770" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/aribornstein/TensorflowJS4Azure/blob/master/README.md">One Click Pose Estimation</a>
+                                    <a href="http://dinosaurpictures.org/ancient-earth">Plot modern addresses on Earth 240M years ago</a>
                                 </span>
                             </td>
                         </tr>
@@ -113,9 +113,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17281824" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17283525" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.quod.us/article/rss-feeds-for-major-us-newspapers">22 top US newspapers in an RSS OPML list</a>
+                                    <a href="https://github.com/aribornstein/TensorflowJS4Azure/blob/master/README.md">One Click Pose Estimation</a>
                                 </span>
                             </td>
                         </tr>
@@ -317,7 +317,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17283606">
                                         
-                                            57 comments
+                                            60 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=imartin2k">imartin2k</a></strong> &nbsp;•&nbsp;
@@ -389,7 +389,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17278175">
                                         
-                                            119 comments
+                                            120 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mgrayson">mgrayson</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528746608" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528747207" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
