--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -389,7 +389,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17283758">
                                         
-                                            145 comments
+                                            147 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ca98am79">ca98am79</a></strong> &nbsp;•&nbsp;
@@ -491,7 +491,7 @@
                                             href="https://news.ycombinator.com/user?id=dredmorbius">dredmorbius</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528567652"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    217 points
+                                    218 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://joeyh.name/blog/entry/the_single_most_important_criteria_when_replacing_Github/">The single most important criteria when replacing GitHub</a>
+                                    <a href="https://www.androidauthority.com/state-of-usb-type-c-870996/">USB Type-C is still a mess</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17248713">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17285411">
                                         
-                                            131 comments
+                                            157 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=edward">edward</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528303670"
+                                            href="https://news.ycombinator.com/user?id=kissickas">kissickas</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528733045"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    211 points
+                                    213 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528748407" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528749011" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
