--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -461,7 +461,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17286207">
                                         
-                                            133 comments
+                                            136 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=leonagano">leonagano</a></strong> &nbsp;•&nbsp;
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://getbitbar.com/plugins/Lifestyle#.Wx1zs_ozpTE.hackernews">Lifestyle plugins for BitBar – Put anything in your Mac OS X menu bar</a>
+                                    <a href="https://blog.reifyworks.com/architect-the-killer-serverless-framework-41565372811b">Architect – A Serverless Framework</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17279599">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17286075">
                                         
-                                            27 comments
+                                            56 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=olds0ul">olds0ul</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528656843"
+                                            href="https://news.ycombinator.com/user?id=mrbbk">mrbbk</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528736070"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     102 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528753808" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528754406" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
