--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -407,17 +407,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/dailyjs/how-i-automated-my-job-with-node-js-94bf4e423017">How I Automated My Job</a>
+                                    <a href="https://www.alternet.org/print/here-are-14-habits-highly-miserable-people">Habits of Highly Miserable People</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17265458">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17287239">
                                         
-                                            79 comments
+                                            92 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=codingcoop">codingcoop</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528466591"
+                                            href="https://news.ycombinator.com/user?id=gscott">gscott</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528743083"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     201 points
                                 </span>
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.boxfactura.com/pulltorefresh.js/">Pull to Refresh.js</a>
+                                    <a href="https://medium.com/dailyjs/how-i-automated-my-job-with-node-js-94bf4e423017">How I Automated My Job</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17256443">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17265458">
                                         
-                                            77 comments
+                                            79 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=evo_9">evo_9</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528384308"
+                                            href="https://news.ycombinator.com/user?id=codingcoop">codingcoop</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528466591"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     201 points
                                 </span>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528759208" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528759807" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
