--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -407,17 +407,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.yours.org/content/first-atomic-bet-on-bitcoin-cash-using-new-opcodes-fc83fe2e0eda">First atomic bet on Bitcoin Cash using new opcodes</a>
+                                    <a href="https://blog.graphql.guide/introducing-the-graphql-guide-11a5ae48628a?source=search_post---------0">New Book from John Resig, the GraphQL Guide</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17283865">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17289048">
                                         
-                                            46 comments
+                                            12 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ca98am79">ca98am79</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528722670"
+                                            href="https://news.ycombinator.com/user?id=sbr464">sbr464</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528754804"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     74 points
                                 </span>
@@ -431,19 +431,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://lists.nongnu.org/archive/html/gcl-devel/2012-10/pdfkieTlklRzN.pdf">How to Print Floating-Point Numbers Accurately (1990) [pdf]</a>
+                                    <a href="https://www.yours.org/content/first-atomic-bet-on-bitcoin-cash-using-new-opcodes-fc83fe2e0eda">First atomic bet on Bitcoin Cash using new opcodes</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17277560">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17283865">
                                         
-                                            26 comments
+                                            46 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=tosh">tosh</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528628351"
+                                            href="https://news.ycombinator.com/user?id=ca98am79">ca98am79</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528722670"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    72 points
+                                    74 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528763406" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528764006" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
