--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/s-matyukevich/raspberry-pi-os">Learning operating system development using Linux kernel and Raspberry Pi</a>
+                                    <a href="https://www.amasad.me/github">GitHub and Open-Source Is a Boon for the Underprivileged</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17282000">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17277018">
                                         
-                                            42 comments
+                                            176 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=axiomdata316">axiomdata316</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528694239"
+                                            href="https://news.ycombinator.com/user?id=amasad">amasad</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528615562"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    322 points
+                                    323 points
                                 </span>
                             </td>
                         </tr>
@@ -539,7 +539,7 @@
                                             href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528736202"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    288 points
+                                    289 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528770008" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528770610" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
