--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://brandur.org/graphql">Living APIs and the Case for GraphQL</a>
+                                    <a href="https://www.youtube.com/watch?v=wSdV1M7n4gQ">Anders Hejlsberg on Modern Compiler Construction (2016) [video]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17269028">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17280589">
                                         
-                                            79 comments
+                                            35 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=craigkerstiens">craigkerstiens</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528486847"
+                                            href="https://news.ycombinator.com/user?id=PredictorY">PredictorY</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528670647"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     210 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528773007" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528773607" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
