--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -215,17 +215,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.dannyguo.com/blog/the-decline-of-the-macbook-pro/">The Decline of the MacBook Pro</a>
+                                    <a href="https://brandur.org/graphql">Living APIs and the Case for GraphQL</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17266492">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17269028">
                                         
-                                            291 comments
+                                            79 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dguo">dguo</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528472263"
+                                            href="https://news.ycombinator.com/user?id=craigkerstiens">craigkerstiens</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528486847"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     210 points
                                 </span>
@@ -239,19 +239,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.youtube.com/watch?v=wSdV1M7n4gQ">Anders Hejlsberg on Modern Compiler Construction (2016) [video]</a>
+                                    <a href="https://www.dannyguo.com/blog/the-decline-of-the-macbook-pro/">The Decline of the MacBook Pro</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17280589">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17266492">
                                         
-                                            35 comments
+                                            291 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=PredictorY">PredictorY</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528670647"
+                                            href="https://news.ycombinator.com/user?id=dguo">dguo</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528472263"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    209 points
+                                    210 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528773007" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528773607" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
