--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://polyaxon.com/">Polyaxon – An open source platform for reproducible machine learning at scale</a>
+                                    <a href="https://twitter.com/DanielMicay/status/1006299769214562305">CopperheadOS has imploded</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17276509">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17289536">
                                         
-                                            20 comments
+                                            28 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jonbaer">jonbaer</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528604691"
+                                            href="https://news.ycombinator.com/user?id=nitrohorse">nitrohorse</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528760102"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     107 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528774208" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528774806" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
